Codepkg/objects/Position__c.object
<CustomObject>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Opened__c</fullName>
        <formula>IF( ISBLANK( Close_Date__c ) , TODAY()  -  Open_Date__c , Close_Date__c  -  Open_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Opened</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Functional_Area__c</fullName>
        <label>Functional Area</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HR</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>Operation</fullName>
                </value>
                <value>
                    <fullName>Accountant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hiring_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hiring Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Positions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Java_Script__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Java Script</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Java__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Java</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Description__c</fullName>
        <label>Job Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Australia,TX</fullName>
                </value>
                <value>
                    <fullName>London,England</fullName>
                </value>
                <value>
                    <fullName>Sydney,Aus</fullName>
                </value>
                <value>
                    <fullName>Newyork,NY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Max_Pay__c</fullName>
        <label>Max Pay</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Min_Pay__c</fullName>
        <label>Min Pay</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Open_Date__c</fullName>
        <label>Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>New Position
Open
Closed-Not Approved
Close-Cancelled</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New positon</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed-Not Approved</fullName>
                </value>
                <value>
                    <fullName>Closed-Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Travelled_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Travelled Required</label>
        <type>Checkbox</type>
    </fields>
    <label>Position</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Position Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Positions</pluralLabel>
    <recordTypes>
        <fullName>IT</fullName>
        <active>true</active>
        <label>IT</label>
    </recordTypes>
    <recordTypes>
        <fullName>IT_Job</fullName>
        <active>true</active>
        <label>ITJob</label>
    </recordTypes>
    <recordTypes>
        <fullName>NONIT</fullName>
        <active>true</active>
        <label>NONIT</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Close_DateRule</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Close_Date__c )  &amp;&amp; ISPICKVAL( Status__c ,&apos;Closed-Not Approved&apos; )</errorConditionFormula>
        <errorMessage>Please provide closed date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Min_Pay_rule</fullName>
        <active>true</active>
        <errorConditionFormula>Min_Pay__c  &gt;  Max_Pay__c</errorConditionFormula>
        <errorMessage>minimum pay should not be greater than Max Pay</errorMessage>
    </validationRules>
</CustomObject>